content/boundary/v0.13.x/content/docs/troubleshoot/troubleshoot-recorded-sessions.mdx
---
layout: docs
page_title: Manage recorded sessions
description: |-
  How to troubleshoot issues with Boundary's recorded sessions
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# Troubleshoot session recordings

Refer to the following for information about how to troubleshoot recorded sessions.

## Known bugs

**Rotation of AWS access and secret keys during a session results in stale recordings**

In Boundary version 0.13.0, when you rotate a storage bucket's secrets, any new sessions use the new credentials.
However, previously established sessions continue to use the old credentials.

As a best practice, administrators should rotate credentials in a phased manner, ensuring that all previously established sessions are completed before revoking the stale credentials.
Otherwise, you may end up with recordings that aren't stored in the remote storage bucket and are unable to be played back.

## Tips

When you create or update a storage bucket, the actions `GetBucketAcl` and `GetEncryptionConfiguration` can be helpful in debugging access issues.
